<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_sign_in">Username</string>
    <string name="password_sign_in">Password</string>
    <string name="click_to_sign_up">Click To Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="add_picture">Set Picture</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="confirm_password_sign_up">Confirm Password</string>
    <string name="enter_server_ip">Enter Server Ip</string>
    <string name="save_server_ip_btn">SAVE</string>
    <string name="BaseUrl">10.0.2.2/api/</string>
    <string name="display_name">Display Name</string>
    <string name="displayname">DisplayName</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="dark_mode">Dark Mode</string>

</resources>