<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/w1"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxWidth="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_whatsapp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/username_sign_in"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:textColorHint="@color/grayBackground"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_profile_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="13"
            android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_sign_in"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:textColorHint="@color/grayBackground"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="21"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password_sign_up"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grayBackground"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="21"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/display_name"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grayBackground"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tVAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom">


            <Button
                android:id="@+id/btnAddPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:padding="15dp"
                android:text="@string/add_picture"
                android:textColor="@color/whatsAppColor"
                app:backgroundTint="@color/white"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/sign_up_btn"
                android:textAllCaps="false"
                app:backgroundTint="@color/design_default_color_secondary_variant"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.774"
                app:layout_constraintStart_toEndOf="@+id/btnAddPicture"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginTop="25dp"-->
        <!--            android:orientation="horizontal">-->

        <!--            <Button-->
        <!--                android:id="@+id/btnGoogle"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="4dp"-->
        <!--                android:layout_marginRight="4dp"-->
        <!--                android:layout_weight="1"-->
        <!--                android:drawableLeft="@drawable/ic_google"-->
        <!--                android:padding="15dp"-->
        <!--                android:text="Google"-->
        <!--                android:textAllCaps="false"-->
        <!--                android:textColor="@color/black"-->
        <!--                app:backgroundTint="@color/white"-->
        <!--                app:cornerRadius="10dp" />-->

        <!--            <Button-->
        <!--                android:id="@+id/btnFacebook"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="4dp"-->
        <!--                android:layout_weight="1"-->
        <!--                android:drawableStart="@drawable/ic_facebook"-->
        <!--                android:padding="15dp"-->
        <!--                android:text="Facebook"-->
        <!--                android:textAllCaps="false"-->
        <!--                android:textColor="@color/black"-->
        <!--                app:backgroundTint="@color/fb_color"-->
        <!--                app:cornerRadius="10dp" />-->
        <!--        </LinearLayout>-->


            <ImageView
                android:id="@+id/signUpDisplayPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"
                android:background="@drawable/circle_background"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>